// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> render matched route is active in snapshot 1`] = `
<styled.div
  align="middle"
  isAuthenticated={true}
>
  <Styled(Link)
    data-active={true}
    key="/"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/proposals"
    onClick={[Function]}
    spaced={true}
    to="/proposals"
  >
    Proposals
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/bookings"
    onClick={[Function]}
    spaced={true}
    to="/bookings"
  >
    Bookings
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/holds"
    onClick={[Function]}
    spaced={true}
    to="/holds"
  >
    Holds
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/calendar"
    onClick={[Function]}
    spaced={true}
    to="/calendar"
  >
    Calendar
  </Styled(Link)>
</styled.div>
`;

exports[`<Menu /> render matches logged in snapshot 1`] = `
<styled.div
  align="middle"
  isAuthenticated={true}
>
  <Styled(Link)
    data-active={false}
    key="/"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/proposals"
    onClick={[Function]}
    spaced={true}
    to="/proposals"
  >
    Proposals
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/bookings"
    onClick={[Function]}
    spaced={true}
    to="/bookings"
  >
    Bookings
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/holds"
    onClick={[Function]}
    spaced={true}
    to="/holds"
  >
    Holds
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/calendar"
    onClick={[Function]}
    spaced={true}
    to="/calendar"
  >
    Calendar
  </Styled(Link)>
</styled.div>
`;

exports[`<Menu /> render matches logged out snapshot 1`] = `
<styled.div
  align="middle"
  isAuthenticated={false}
>
  <Styled(Link)
    data-active={false}
    key="/"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/proposals"
    onClick={[Function]}
    spaced={true}
    to="/proposals"
  >
    Proposals
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/bookings"
    onClick={[Function]}
    spaced={true}
    to="/bookings"
  >
    Bookings
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/holds"
    onClick={[Function]}
    spaced={true}
    to="/holds"
  >
    Holds
  </Styled(Link)>
  <Styled(Link)
    data-active={false}
    key="/calendar"
    onClick={[Function]}
    spaced={true}
    to="/calendar"
  >
    Calendar
  </Styled(Link)>
</styled.div>
`;
